--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header class="header">
         <h1>Golf</h1>
         <div>
-            <button class="reiniciar">Reiniciar</button>
-            <button class="girar">Girar</button>
+            <button class="reiniciar" onclick="reiniciar()">Reiniciar</button>
+            <button class="girar" onclick="girar()">Girar</button>
         </div>
     </header>
     <div class="campo">
